k8s/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: game-tictactoe
  name: app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app
    spec:
      containers:
      - name: app
        image: # Add your image here
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 5
          failureThreshold: 3
