k8s/Internal_Service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: game-tictactoe
  name: app-service
spec:
  selector:
    app.kubernetes.io/name: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
